[workspace]

members = [
  "ui",
  "utils",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
minidom = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"

[workspace.dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml"
features = ["serde"]
