[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
sfml = { workspace = true }
tracing = { workspace = true }
minidom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
