[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
sfml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
